kong/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mockup-app
  namespace: mockup-app
spec:
  parentRefs:
    - name: kong
      namespace: kong

  hostnames:
    - mockup.app.local

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: mockup-app
          port: 80
